[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5.0", features = ["cors"] }
async-trait = "0.1"
anyhow = "1.0.97"
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.6"
